testData/parser/PlusPlusRecover.go
package main

func main() {
	i := 0
	i //error
	&i //error
	/i //error
	/=i //error
	^i //error
	<i //error
	<<i //error
	=i //error
	==i //error
	>i //error
	>>i //error
	...i //error
	!i //error
	!=i //error
	%i //error
	&&i //error
	&=i //error
	&^i //error
	&^=i //error
	+=i //error
	--i //error
	++i //error
	Println()
}